chore(tab-content): update background to be transparent

--- a/src/patternfly/components/TabContent/tab-content.scss
+++ b/src/patternfly/components/TabContent/tab-content.scss
@@ -5,7 +5,7 @@
   --#{$tab-content}__body--PaddingRight: 0;
   --#{$tab-content}__body--PaddingBottom: 0;
   --#{$tab-content}__body--PaddingLeft: 0;
-  --#{$tab-content}--BackgroundColor: var(--pf-t--global--background--color--primary--default);
+  --#{$tab-content}--BackgroundColor: transparent;
 
   // Padding
   --#{$tab-content}__body--m-padding--PaddingTop: var(--pf-t--global--spacer--md);
