--- a/src/patternfly/components/NotificationDrawer/notification-drawer.scss
+++ b/src/patternfly/components/NotificationDrawer/notification-drawer.scss
@@ -13,6 +13,8 @@
   --#{$notification-drawer}__header--ZIndex: var(--pf-t--global--Zindex--sm);
   --#{$notification-drawer}__header-title--FontSize: var(--pf-t--global--font--size--heading--md);
   --#{$notification-drawer}__header-title--FontWeight: var(--pf-t--global--font--weight--heading--bold);
+  --#{$notification-drawer}__header-title--LineHeight: var(--pf-t--global--font--line-height--heading);
+  --#{$notification-drawer}__header-title--FontFamily: var(--pf-t--global--font--family--heading);
   --#{$notification-drawer}__header-status--MarginLeft: var(--pf-t--global--spacer--md);
   --#{$notification-drawer}__header-status--FontWeight: var(--pf-t--global--font--weight--body--bold);
   --#{$notification-drawer}__header-status--FontSize: var(--pf-t--global--font--size--body--default);
@@ -38,7 +40,7 @@
   --#{$notification-drawer}__list-item--BorderRadius: var(--pf-t--global--border--radius--medium);
 
   // List item modifiers
-  --#{$notification-drawer}__list-item--m-info__list-item-header-icon--Color: var(--pf-t--global--icon--color--brand--default);
+  --#{$notification-drawer}__list-item--m-info__list-item-header-icon--Color: var(--pf-t--global--icon--color--status--info--default);
   --#{$notification-drawer}__list-item--m-info__list-item--BorderColor: var(--pf-t--global--border--color--status--info--default);
   --#{$notification-drawer}__list-item--m-warning__list-item-header-icon--Color: var(--pf-t--global--icon--color--status--warning--default);
   --#{$notification-drawer}__list-item--m-warning__list-item--BorderColor: var(--pf-t--global--border--color--status--warning--default);
@@ -63,7 +65,6 @@
   // List item header title
   --#{$notification-drawer}__list-item-header-title--FontWeight: var(--pf-t--global--font--weight--heading--bold);
   --#{$notification-drawer}__list-item-header-title--max-lines: 1;
-  --#{$notification-drawer}__list-item--m-read__list-item-header-title--FontWeight: var(--pf-t--global--font--weight--heading--bold);
 
   // List item description
   --#{$notification-drawer}__list-item-description--MarginBottom: var(--pf-t--global--spacer--sm);
@@ -123,8 +124,10 @@
 }
 
 .#{$notification-drawer}__header-title {
+  font-family: var(--#{$notification-drawer}__header-title--FontFamily);
   font-size: var(--#{$notification-drawer}__header-title--FontSize);
   font-weight: var(--#{$notification-drawer}__header-title--FontWeight);
+  line-height: var(--#{$notification-drawer}__header-title--LineHeight);
 }
 
 .#{$notification-drawer}__header-status {
@@ -196,7 +199,6 @@
     --#{$notification-drawer}__list-item--BorderWidth: var(--#{$notification-drawer}__list-item--m-read--BorderWidth);
     --#{$notification-drawer}__list-item--BackgroundColor: var(--#{$notification-drawer}__list-item--m-read--BackgroundColor);
     --#{$notification-drawer}__list-item--BorderColor: var(--#{$notification-drawer}__list-item--m-read--BorderColor);
-    --#{$notification-drawer}__list-item-header-title--FontWeight: var(--#{$notification-drawer}__list-item--m-read__list-item-header-title--FontWeight);
 
     position: relative;
   }
