--- a/src/patternfly/components/Switch/switch.scss
+++ b/src/patternfly/components/Switch/switch.scss
@@ -1,51 +1,52 @@
 // @debug $switch; // check your variable names located in src/patternfly/sass-utilities/component-namespaces.scss
 
+:root,
 .#{$switch} {
   // Switch - the vars for this file don't follow our normal order so that the IE11 script can convert the vars correctly
-  --#{$switch}--FontSize: var(--#{$pf-global}--FontSize--md);
-  --#{$switch}__label--PaddingLeft: var(--#{$pf-global}--spacer--md); // remove at breaking change
-  --#{$switch}--ColumnGap: var(--#{$switch}__label--PaddingLeft); // update at breaking change
+  --#{$switch}--FontSize: var(--pf-t--global--font--size--sm);
+  --#{$switch}--ColumnGap: var(--pf-t--global--spacer--sm);
 
   // Switch icon
   --#{$switch}__toggle-icon--FontSize: calc(var(--#{$switch}--FontSize) * .625); // We don't use an icon font-size here because this value allows the icon to scale relative to the switch's font-size.
-  --#{$switch}__toggle-icon--Color: var(--#{$pf-global}--Color--light-100);
+  --#{$switch}__toggle-icon--Color: var(--pf-t--global--icon--color--on-brand--default);
   --#{$switch}__toggle-icon--Left: calc(var(--#{$switch}--FontSize) * .4);
   --#{$switch}__toggle-icon--Offset: #{pf-size-prem(2px)}; // this value is created to handle sizing of the toggle and therefore the width of the toggle and its transform value.
-  --#{$switch}__input--disabled__toggle-icon--Color: var(--#{$pf-global}--palette--black-150);
+  --#{$switch}__input--disabled__toggle-icon--Color: var(--pf-t--global--icon--color--disabled);
 
   // Switch
-  --#{$switch}--LineHeight: var(--#{$pf-global}--LineHeight--md);
+  --#{$switch}--LineHeight: var(--pf-t--global--font--line-height--body);
   --#{$switch}--Height: auto;
 
   // Switch input
-  --#{$switch}__input--checked__toggle--BackgroundColor: var(--#{$pf-global}--primary-color--100);
+  --#{$switch}__input--checked__toggle--BackgroundColor: var(--pf-t--global--color--brand--default);
   --#{$switch}__input--checked__toggle--before--TranslateX: calc(100% + var(--#{$switch}__toggle-icon--Offset));
-  --#{$switch}__input--checked__label--Color: var(--#{$pf-global}--Color--dark-100);
-  --#{$switch}__input--not-checked__label--Color: var(--#{$pf-global}--disabled-color--100);
-  --#{$switch}__input--disabled__label--Color: var(--#{$pf-global}--disabled-color--100);
-  --#{$switch}__input--disabled__toggle--BackgroundColor: var(--#{$pf-global}--disabled-color--200);
-  --#{$switch}__input--disabled__toggle--before--BackgroundColor: var(--#{$pf-global}--palette--black-150);
-  --#{$switch}__input--focus__toggle--OutlineWidth: var(--#{$pf-global}--BorderWidth--md);
-  --#{$switch}__input--focus__toggle--OutlineOffset: var(--#{$pf-global}--spacer--sm);
-  --#{$switch}__input--focus__toggle--OutlineColor: var(--#{$pf-global}--primary-color--100);
+  --#{$switch}__input--checked__toggle--BorderWidth: 0;
+  --#{$switch}__input--checked__label--Color: var(--pf-t--global--text--color--regular);
+  --#{$switch}__input--not-checked__label--Color: var(--pf-t--global--text--color--subtle);
+  --#{$switch}__input--disabled__label--Color: var(--pf-t--global--text--color--disabled);
+  --#{$switch}__input--disabled__toggle--BackgroundColor: var(--pf-t--global--background--color--disabled--default);
+  --#{$switch}__input--checked__toggle--before--BackgroundColor: var(--pf-t--global--icon--color--inverse);
+  --#{$switch}__input--not-checked__toggle--before--BackgroundColor: var(--pf-t--global--icon--color--subtle);
+  --#{$switch}__input--disabled__toggle--before--BackgroundColor: var(--pf-t--global--icon--color--on-disabled);
+  --#{$switch}__input--focus__toggle--OutlineWidth: var(--pf-t--global--border--width--strong);
+  --#{$switch}__input--focus__toggle--OutlineOffset: var(--pf-t--global--spacer--xs);
+  --#{$switch}__input--focus__toggle--OutlineColor: var(--pf-t--global--color--brand--default);
 
   // Switch toggle
   --#{$switch}__toggle--Height: calc(var(--#{$switch}--FontSize) * var(--#{$switch}--LineHeight));
-  --#{$switch}__toggle--BackgroundColor: var(--#{$pf-global}--palette--black-500);
-  --#{$switch}__toggle--BorderRadius: var(--#{$switch}__toggle--Height);
+  --#{$switch}__toggle--BackgroundColor: var(--pf-t--global--background--color--control--default);
+  --#{$switch}__toggle--BorderColor: var(--pf-t--global--border--color--default);
+  --#{$switch}__toggle--BorderWidth: var(--pf-t--global--border--width--control--default);
+  --#{$switch}__toggle--BorderRadius: var(--pf-t--global--border--radius--pill);
   --#{$switch}__toggle--before--Width: calc(var(--#{$switch}--FontSize) - var(--#{$switch}__toggle-icon--Offset));
   --#{$switch}__toggle--before--Height: var(--#{$switch}__toggle--before--Width);
-  --#{$switch}__toggle--before--Top: calc((var(--#{$switch}__toggle--Height) - var(--#{$switch}__toggle--before--Height)) / 2);
-  --#{$switch}__toggle--before--Left: var(--#{$switch}__toggle--before--Top);
-  --#{$switch}__toggle--before--BackgroundColor: var(--#{$pf-global}--BackgroundColor--100);
-  --#{$switch}__toggle--before--BorderRadius: var(--#{$pf-global}--BorderRadius--lg);
-  --#{$switch}__toggle--before--BoxShadow: var(--#{$pf-global}--BoxShadow--md);
+  --#{$switch}__toggle--before--Left: calc((var(--#{$switch}__toggle--Height) - var(--#{$switch}__toggle--before--Height)) / 2);
+  --#{$switch}__toggle--before--BorderRadius: var(--pf-t--global--border--radius--large);
   --#{$switch}__toggle--before--Transition: transform .25s ease 0s;
   --#{$switch}__toggle--Width: calc(var(--#{$switch}__toggle--Height) + var(--#{$switch}__toggle-icon--Offset) + var(--#{$switch}__toggle--before--Width));
+}
 
-  // Switch label
-  --#{$switch}__label--Color: var(--#{$pf-global}--Color--dark-100);
-
+.#{$switch} {
   position: relative;
   display: inline-grid;
   grid-template-columns: auto;
@@ -85,14 +86,18 @@
     }
 
     ~ .#{$switch}__toggle {
+      --#{$switch}__toggle--BorderWidth: var(--#{$switch}__input--checked__toggle--BorderWidth);
+
       background-color: var(--#{$switch}__input--checked__toggle--BackgroundColor);
 
       &::before {
         @include pf-v5-bidirectional-style(
           $prop: transform,
-          $ltr-val: translateX(var(--#{$switch}__input--checked__toggle--before--TranslateX)),
-          $rtl-val: translateX(#{pf-v5-calc-inverse(var(--#{$switch}__input--checked__toggle--before--TranslateX))})
+          $ltr-val: translate(var(--#{$switch}__input--checked__toggle--before--TranslateX), -50%),
+          $rtl-val: translate(#{pf-v5-calc-inverse(var(--#{$switch}__input--checked__toggle--before--TranslateX))}, -50%)
         );
+
+        background-color: var(--#{$switch}__input--checked__toggle--before--BackgroundColor);
       }
     }
 
@@ -148,24 +153,32 @@
 
   &::before {
     position: absolute;
-   inset-block-start: var(--#{$switch}__toggle--before--Top);
-   inset-inline-start: var(--#{$switch}__toggle--before--Left);
+    inset-block-start: 50%;
+    inset-inline-start: var(--#{$switch}__toggle--before--Left);
     display: block;
     width: var(--#{$switch}__toggle--before--Width);
     height: var(--#{$switch}__toggle--before--Height);
     content: "";
-    background-color: var(--#{$switch}__toggle--before--BackgroundColor);
+    background-color: var(--#{$switch}__input--not-checked__toggle--before--BackgroundColor);
     border-radius: var(--#{$switch}__toggle--before--BorderRadius);
-    box-shadow: var(--#{$switch}__toggle--before--BoxShadow);
     transition: var(--#{$switch}__toggle--before--Transition);
+    transform: translateY(-50%);
+  }
+
+  &::after {
+    position: absolute;
+    inset: 0;
+    content: "";
+    border: var(--#{$switch}__toggle--BorderWidth) solid var(--#{$switch}__toggle--BorderColor);
+    border-radius: var(--#{$switch}__toggle--BorderRadius);
   }
 }
 
 .#{$switch}__toggle-icon {
   position: absolute;
- inset-block-start: 0;
- inset-block-end: 0;
- inset-inline-start: var(--#{$switch}__toggle-icon--Left);
+  inset-block-start: 0;
+  inset-block-end: 0;
+  inset-inline-start: var(--#{$switch}__toggle-icon--Left);
   display: flex;
   align-items: center;
   font-size: var(--#{$switch}__toggle-icon--FontSize);
@@ -175,13 +188,5 @@
 .#{$switch}__label {
   display: inline-block;
   grid-column: 2;
-  color: var(--#{$switch}__label--Color);
   vertical-align: top;
-}
-
-// stylelint-disable no-invalid-position-at-import-rule
-@import "themes/dark/switch";
-
-@include pf-v5-theme-dark {
-  @include pf-v5-theme-dark-switch;
 }
