--- a/src/patternfly/components/Progress/progress.scss
+++ b/src/patternfly/components/Progress/progress.scss
@@ -1,40 +1,40 @@
 // @debug $progress; // check your variable names located in src/patternfly/sass-utilities/component-namespaces.scss
 
+:root,
 .#{$progress} {
   // Component variables
-  --#{$progress}--GridGap: var(--#{$pf-global}--spacer--md);
-
+  --#{$progress}--GridGap: var(--pf-t--global--spacer--md);
+  
   // Element variables
-  --#{$progress}__bar--before--BackgroundColor: var(--#{$pf-global}--primary-color--100);
-  --#{$progress}__bar--Height: var(--#{$pf-global}--spacer--md);
-  --#{$progress}__bar--BackgroundColor: var(--#{$pf-global}--BackgroundColor--light-100); // the bar always needs white under it so that the semi-transparent color shows correctly
+  --#{$progress}__bar--Height: var(--pf-t--global--spacer--md);
+  --#{$progress}__bar--BackgroundColor: var(--pf-t--global--color--nonstatus--gray--default); // the bar always needs white under it so that the semi-transparent color shows correctly
   --#{$progress}__measure--m-static-width--MinWidth: 4.5ch; // 4.5 because the % character is wider than a 0
-  --#{$progress}__status--Gap: var(--#{$pf-global}--spacer--sm);
-  --#{$progress}__status-icon--Color: var(--#{$pf-global}--Color--100); // the status icon default color is the default text color
-  --#{$progress}__bar--before--Opacity: .2; // one-off change in opacity to allow progress bar to automatically coordinate with the indicator color
+  --#{$progress}__status--Gap: var(--pf-t--global--spacer--sm);
+  --#{$progress}__status-icon--Color: var(--pf-t--global--icon--color--regular);
   --#{$progress}__indicator--Height: var(--#{$progress}__bar--Height);
-  --#{$progress}__indicator--BackgroundColor: var(--#{$progress}__bar--before--BackgroundColor);
-  --#{$progress}__helper-text--MarginTop: calc(var(--#{$pf-global}--spacer--xs) - var(--#{$progress}--GridGap));
-
+  --#{$progress}__indicator--BackgroundColor: var(--pf-t--global--color--brand--default);
+  --#{$progress}__helper-text--MarginTop: calc(var(--pf-t--global--spacer--sm) - var(--#{$progress}--GridGap));
+  
   // Modifier variables
-  --#{$progress}--m-success__bar--BackgroundColor: var(--#{$pf-global}--success-color--100);
-  --#{$progress}--m-warning__bar--BackgroundColor: var(--#{$pf-global}--warning-color--100);
-  --#{$progress}--m-danger__bar--BackgroundColor: var(--#{$pf-global}--danger-color--100);
-  --#{$progress}--m-success__status-icon--Color: var(--#{$pf-global}--success-color--100);
-  --#{$progress}--m-warning__status-icon--Color: var(--#{$pf-global}--warning-color--100);
-  --#{$progress}--m-danger__status-icon--Color: var(--#{$pf-global}--danger-color--100);
-  --#{$progress}--m-inside__indicator--MinWidth: var(--#{$pf-global}--spacer--xl);
-  --#{$progress}--m-inside__measure--Color: var(--#{$pf-global}--Color--light-100); // the measure needs to be white when moved inside the progress bar indicator
-  --#{$progress}--m-success--m-inside__measure--Color: var(--#{$pf-global}--Color--light-100); // remove at breaking change
-  --#{$progress}--m-warning--m-inside__measure--Color: var(--#{$pf-global}--Color--dark-100); // the measure still needs to be dark when in warning state
-  --#{$progress}--m-inside__measure--FontSize: var(--#{$pf-global}--FontSize--sm);
-  --#{$progress}--m-outside__measure--FontSize: var(--#{$pf-global}--FontSize--sm);
-  --#{$progress}--m-sm__bar--Height: var(--#{$pf-global}--spacer--sm);
-  --#{$progress}--m-sm__description--FontSize: var(--#{$pf-global}--FontSize--sm);
-  --#{$progress}--m-sm__measure--FontSize: var(--#{$pf-global}--FontSize--sm);
-  --#{$progress}--m-lg__bar--Height: var(--#{$pf-global}--spacer--lg);
+  --#{$progress}--m-success__indicator--BackgroundColor: var(--pf-t--global--color--status--success--default);
+  --#{$progress}--m-warning__indicator--BackgroundColor: var(--pf-t--global--color--status--warning--default);
+  --#{$progress}--m-danger__indicator--BackgroundColor: var(--pf-t--global--color--status--danger--default);
+  --#{$progress}--m-success__status-icon--Color: var(--pf-t--global--icon--color--status--success--default);
+  --#{$progress}--m-warning__status-icon--Color: var(--pf-t--global--icon--color--status--warning--default);
+  --#{$progress}--m-danger__status-icon--Color: var(--pf-t--global--icon--color--status--danger--default);
+  --#{$progress}--m-inside__indicator--MinWidth: var(--pf-t--global--spacer--xl);
+  --#{$progress}--m-inside__measure--Color: var(--pf-t--global--text--color--on-brand--default);
+  --#{$progress}--m-success--m-inside__measure--Color: var(--pf-t--global--text--color--status--on-success--default);
+  --#{$progress}--m-warning--m-inside__measure--Color: var(--pf-t--global--text--color--status--on-warning--default);
+  --#{$progress}--m-danger--m-inside__measure--Color: var(--pf-t--global--text--color--status--on-danger--default);
+  --#{$progress}--m-inside__measure--FontSize: var(--pf-t--global--font--size--sm);
+  --#{$progress}--m-outside__measure--FontSize: var(--pf-t--global--font--size--sm);
+  --#{$progress}--m-sm__bar--Height: var(--pf-t--global--spacer--sm);
+  --#{$progress}--m-sm__measure--FontSize: var(--pf-t--global--font--size--body--sm);
+  --#{$progress}--m-lg__bar--Height: var(--pf-t--global--spacer--lg);
+}
 
-  // Component styles
+.#{$progress} {
   display: grid;
   grid-template-rows: 1fr auto;
   grid-template-columns: auto auto;
@@ -44,11 +44,7 @@
   // Modifiers
   // size modifiers
   &.pf-m-sm {
-    --#{$progress}__bar--Height: var(--#{$progress}--m-sm__bar--Height); // set height to the small height
-
-    .#{$progress}__description {
-      font-size: var(--#{$progress}--m-sm__description--FontSize);
-    }
+    --#{$progress}__bar--Height: var(--#{$progress}--m-sm__bar--Height);
 
     .#{$progress}__measure {
       font-size: var(--#{$progress}--m-sm__measure--FontSize);
@@ -56,7 +52,7 @@
   }
 
   &.pf-m-lg {
-    --#{$progress}__bar--Height: var(--#{$progress}--m-lg__bar--Height); // set height to the large height
+    --#{$progress}__bar--Height: var(--#{$progress}--m-lg__bar--Height);
   }
 
   // an inside-style progress component shows the measure inside the indicator
@@ -129,20 +125,21 @@
 
   // status modifiers
   &.pf-m-success {
-    --#{$progress}__bar--before--BackgroundColor: var(--#{$progress}--m-success__bar--BackgroundColor);
+    --#{$progress}__indicator--BackgroundColor: var(--#{$progress}--m-success__indicator--BackgroundColor);
     --#{$progress}__status-icon--Color: var(--#{$progress}--m-success__status-icon--Color);
     --#{$progress}--m-inside__measure--Color: var(--#{$progress}--m-success--m-inside__measure--Color);
   }
 
   &.pf-m-warning {
-    --#{$progress}__bar--before--BackgroundColor: var(--#{$progress}--m-warning__bar--BackgroundColor);
+    --#{$progress}__indicator--BackgroundColor: var(--#{$progress}--m-warning__indicator--BackgroundColor);
     --#{$progress}__status-icon--Color: var(--#{$progress}--m-warning__status-icon--Color);
     --#{$progress}--m-inside__measure--Color: var(--#{$progress}--m-warning--m-inside__measure--Color);
   }
-
+  
   &.pf-m-danger {
-    --#{$progress}__bar--before--BackgroundColor: var(--#{$progress}--m-danger__bar--BackgroundColor);
+    --#{$progress}__indicator--BackgroundColor: var(--#{$progress}--m-danger__indicator--BackgroundColor);
     --#{$progress}__status-icon--Color: var(--#{$progress}--m-danger__status-icon--Color);
+    --#{$progress}--m-inside__measure--Color: var(--#{$progress}--m-danger--m-inside__measure--Color);
   }
 }
 
@@ -192,15 +189,6 @@
   align-self: center;
   height: var(--#{$progress}__bar--Height);
   background-color: var(--#{$progress}__bar--BackgroundColor);
-
-  &::before {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    content: "";
-    background-color: var(--#{$progress}__bar--before--BackgroundColor);
-    opacity: var(--#{$progress}__bar--before--Opacity);
-  }
 }
 
 // the progress__indicator is the part that advances (widens) as progress is made
@@ -215,11 +203,4 @@
   grid-row: 3 / 4;
   grid-column: 1 / 3;
   margin-block-start: var(--#{$progress}__helper-text--MarginTop);
-}
-
-// stylelint-disable no-invalid-position-at-import-rule
-@import "themes/dark/progress";
-
-@include pf-v5-theme-dark {
-  @include pf-v5-theme-dark-progress;
 }
